syntax = "proto3";

package tsdb;

option go_package = "github.com/grafana/loki/pkg/storage/tsdb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Label {
    string name  = 1;
    string value = 2;
}

message Labels {
    repeated Label labels = 1 [(gogoproto.nullable) = false];
}

message Series  {
    Labels labels   = 1 [(gogoproto.nullable) = false];
    Fingerprint fingerprint   = 2 [(gogoproto.nullable) = false];
}

message MutliSeries  {
    repeated Series series = 1 [(gogoproto.nullable) = false];
}

message Fingerprint {
    int64 fp = 1;
}

message ChunkRef {
    string User = 1;
    Fingerprint fingerprint = 2;
    int64 start = 3; 
    int64 end = 4; 
    int32 checksum = 5;
}

message ChunkRefs {
    repeated ChunkRef refs = 1 [(gogoproto.nullable) = false];
}